Registration Z-Index Issue Fixed (#18)

--- a/skin/frontend/b-responsive/360fly/css/harpreet.css
+++ b/skin/frontend/b-responsive/360fly/css/harpreet.css
@@ -22,13 +22,14 @@ iframe{border:none;}
 .h5px{height:5px;}
 .wrapper {background-color: transparent;overflow:hidden;text-align:left;}
 .header-bg-black, .header-bg-green{width:100%;position:absolute;z-index:-1;}
+.customer-account-create .header-bg-black, .customer-account-create .header-bg-green{z-index:0;}
 .header-bg-black{top:0;background:#000000;}
 .header-bg-green{top:95px;background:#7ABC31;}
 .cms-index-index .header, .cms-page-view .header, .catalog-category-view .header, body div.wrapper .header{height: calc(95px + 36px);z-index:1;border: none;background-color: transparent;position: relative;top: 0;padding:0;}
 .header-mobile{height: calc(95px + 5px);z-index:1;}
 .header .logo{width:auto;margin:0;padding:0;z-index:3;}
 .header .logo a{display:inline-block;height:100%;}
-.header .logo a img{display:inline:block;height:60%;margin:13.35% 0;}
+.header .logo a img{display:inline-block;height:60%;margin:13.35% 0;}
 /*#hand-wrap{display:none;}*/
 .header .navbar{float:right;}
 .header #navbar3{font-size:20px;margin-top:45px;}
@@ -108,7 +109,7 @@ ul.community-dropdown{position: relative;top: 0px;left:0px;}
 .community-btn ul{border-radius:0px;}
 .community-content-left{float:left;padding:0 6px 6px 0px;margin:0;}
 .community-content-right{float:right;padding:0 0 6px 6px;margin:0;}
-.community-first-dd a:{color: #ffffff;font-weight:bold;}
+.community-first-dd a {color: #ffffff;font-weight:bold;}
 .nav .community-first-dd.open > a, .nav .community-first-dd.open > a:hover, .nav .community-first-dd.open > a:focus{background-color: transparent;text-align:left;color:#fff;}
 .nav>li.community-first-dd>a:hover{color: #ffffff;font-weight:bold;}
 /*Community Page Ends*/
